# cpp_tk

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  cpp_tk.cpp  cpp_tk.hpp  custom.cpp  custom.hpp  main.cpp
.github/workflows/: build.yml  ci.yml
cmake/: CppTkRuntime.cmake  FindTCL.cmake  FindTk.cmake
docs/: tasks.md  todo.md
example/: CMakeLists.txt  calc.cpp  calendar_demo.cpp  clock.cpp  eyes.cpp  multithread_text.cpp  sample1.cpp  sample2.cpp  scrolled_text.cpp  tree_view.cpp
example/theme/: CMakeLists.txt  sv_ttk_demo.cpp
include/: cpp_tk.hpp  cpp_ttk.hpp
src/: CMakeLists.txt  interpreter.cpp  interpreter.hpp  object.cpp  object.hpp  widget.hpp
test/: CMakeLists.txt  test_a_features.cpp  test_a_features_round2.cpp  test_argvalue_composition.cpp  test_calendar.cpp  test_construction_time_options.cpp  test_error_policy.cpp  test_high_impact_parity_gaps.cpp  test_interpreter_client.cpp  test_keep_alive.cpp  test_low_priority_parity_gaps.cpp  test_native_misc.cpp  test_new_classes.cpp  test_round5_a.cpp  test_round5_bcd.cpp  test_runtime_library_override.cpp  test_simpledialog_escape.cpp  test_simpledialog_return.cpp  test_structural_fixes.cpp  test_sv_ttk_theme.cpp  test_thread_safety.cpp  test_tkinter_parity_batch1.cpp  test_tkinter_parity_batch2.cpp  test_uninitialized_objects.cpp  test_widget_basics.cpp
test/compile_check/: CMakeLists.txt
test/compile_check/should_compile/: rvalue_reject_control.cpp
test/compile_check/should_fail/: argvalue_var_ctor.cpp  checkbutton_variable.cpp  combobox_textvariable.cpp  entry_textvariable_classic.cpp  entry_textvariable_ttk.cpp  radiobutton_variable.cpp  spinbox_textvariable_classic.cpp  spinbox_textvariable_ttk.cpp
